--- a/moon/development.ini
+++ b/moon/development.ini
@@ -12,7 +12,10 @@ pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = ja
 pyramid.includes = 
-    pyramid_debugtoolbar
+#    pyramid_debugtoolbar
+
+scss.asset_path = moon:assets/scss
+scss.cache = false
 
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
@@ -25,7 +28,7 @@ pyramid.includes =
 [server:main]
 use = egg:waitress#main
 host = 0.0.0.0
-port = 6543
+port = 7654
 
 ###
 # logging configuration
